<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".Activities.Activity.ForgotPasswordActivity">

    <FrameLayout
        android:id="@+id/fl_header_image"
        android:layout_width="419dp"
        android:layout_height="203dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="376dp"
            android:layout_height="177dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            android:src="@drawable/czajbrary_logo"
            app:tint="@color/colorWhite" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_forgot_password_activity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="top" />
    </FrameLayout>

    <com.example.czajbraryapp.Utils.MSPTextViewBold
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/title_forgot_password"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/forgot_password_title_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fl_header_image" />

    <com.example.czajbraryapp.Utils.MSPTextView
        android:id="@+id/tv_title_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:text="@string/forgot_password_title_description"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/forgot_password_title_description_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <EditText
        android:id="@+id/til_email_forgot"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/colorDarkGrey"
        android:hint="@string/et_hint_email_id"
        android:textColor="@color/colorPrimaryText"
        android:textColorHint="@color/colorSecondaryText"
        android:textSize="@dimen/input_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_description">

    </EditText>

    <com.example.czajbraryapp.Utils.MSPButton
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_background"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:paddingTop="@dimen/btn_padding"
        android:paddingBottom="@dimen/btn_padding"
        android:text="@string/btn_lbl_submit"
        android:textColor="@android:color/white"
        android:textSize="@dimen/btn_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_email_forgot" />

</androidx.constraintlayout.widget.ConstraintLayout>