<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".Activities.Activity.RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_register_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.example.czajbraryapp.Utils.MSPTextViewBold
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="@dimen/toolbar_title_paddingStart"
            android:paddingEnd="0dp"
            android:text="@string/create_an_account"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/toolbar_title_text_size" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_register_activity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/til_first_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/colorDarkGrey"
                android:hint="@string/hint_first_name"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorSecondaryText"
                android:textSize="@dimen/input_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
            </EditText>

            <EditText
                android:id="@+id/til_last_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/colorDarkGrey"
                android:hint="@string/hint_last_name"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorSecondaryText"
                android:textSize="@dimen/input_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_first_name">
            </EditText>

            <EditText
                android:id="@+id/til_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/colorDarkGrey"
                android:hint="@string/et_hint_email_id"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorSecondaryText"
                android:textSize="@dimen/input_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_last_name">
            </EditText>

            <EditText
                android:id="@+id/til_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/colorDarkGrey"
                android:hint="@string/et_hint_password"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorSecondaryText"
                android:textSize="@dimen/input_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_email">
            </EditText>

            <EditText
                android:id="@+id/til_confirm_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/colorDarkGrey"
                android:hint="@string/et_hint_confirm_password"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorSecondaryText"
                android:textSize="@dimen/input_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_password">
            </EditText>

            <LinearLayout
                android:id="@+id/ll_terms_and_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_confirm_password">

                <CheckBox
                    android:id="@+id/cb_terms_and_condition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorPrimaryDark"
                    tools:checked="false" />

                <com.example.czajbraryapp.Utils.MSPTextView
                    android:id="@+id/tv_terms_condition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/txt_terms_condition_marginStart"
                    android:text="@string/i_agree_to_the_terms_and_condition"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/txt_terms_and_condition_textSize" />
            </LinearLayout>

            <com.example.czajbraryapp.Utils.MSPButton
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/button_background"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:paddingTop="@dimen/btn_padding"
                android:paddingBottom="@dimen/btn_padding"
                android:text="@string/btn_lbl_register"
                android:textColor="@android:color/white"
                android:textSize="@dimen/btn_textSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_terms_and_condition" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_register">

                <com.example.czajbraryapp.Utils.MSPTextView
                    android:id="@+id/tv_already_have_an_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/clickable_text_view_padding"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/lbl_text_view_textSize" />

                <com.example.czajbraryapp.Utils.MSPTextViewBold
                    android:id="@+id/tv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:foreground="?attr/selectableItemBackground"
                    android:padding="@dimen/clickable_text_view_padding"
                    android:text="@string/login"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/lbl_text_view_textSize" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>