<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".Activities.Activity.LoginActivity">

    <FrameLayout
        android:id="@+id/fl_header_image"
        android:layout_width="416dp"
        android:layout_height="204dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--        <ImageView-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:contentDescription="@string/content_description"-->
        <!--            android:scaleType="fitXY"-->
        <!--            android:src="@drawable/auth_screens_background" />-->

        <ImageView
            android:layout_width="394dp"
            android:layout_height="189dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            android:src="@drawable/czajbrary_logo"
            app:tint="@color/colorWhite" />
    </FrameLayout>

    <com.example.czajbraryapp.Utils.MSPTextViewBold
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/title_login"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/title_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fl_header_image" />

    <EditText
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/colorDarkGrey"
        android:ems="10"
        android:hint="@string/et_hint_email_id"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorSecondaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title">

    </EditText>

    <EditText
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/colorDarkGrey"
        android:ems="10"
        android:hint="@string/et_hint_password"
        android:inputType="textPassword"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorSecondaryText"
        app:layout_constraintEnd_toEndOf="@+id/til_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_email">

    </EditText>

    <com.example.czajbraryapp.Utils.MSPTextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:foreground="?attr/selectableItemBackground"
        android:padding="@dimen/clickable_text_view_padding"
        android:text="@string/lbl_forgot_password"
        android:textColor="@color/colorSecondaryText"
        android:textSize="@dimen/forgot_password_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_password" />

    <com.example.czajbraryapp.Utils.MSPButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_background"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:paddingTop="@dimen/btn_padding"
        android:paddingBottom="@dimen/btn_padding"
        android:text="@string/btn_lbl_login"
        android:textColor="@android:color/white"
        android:textSize="@dimen/btn_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot_password" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login">

        <com.example.czajbraryapp.Utils.MSPTextView
            android:id="@+id/tv_don_t_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="@dimen/clickable_text_view_padding"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/lbl_text_view_textSize" />

        <com.example.czajbraryapp.Utils.MSPTextViewBold
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:foreground="?attr/selectableItemBackground"
            android:padding="@dimen/clickable_text_view_padding"
            android:text="@string/register"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/lbl_text_view_textSize" />
    </LinearLayout>

<!--    <com.facebook.login.widget.LoginButton-->
<!--        android:id="@+id/login_button"-->
<!--        android:layout_width="138dp"-->
<!--        android:layout_height="58dp"-->
<!--        android:background="@drawable/com_facebook_button_background"-->
<!--        android:text="@string/com_facebook_loginview_log_in_button"-->
<!--        android:drawableLeft="@drawable/ic_f_icon"-->
<!--        android:layout_gravity="center_horizontal"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />-->

    <Button
        android:id="@+id/facebook_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/button_background"
        android:drawableStart="@drawable/ic_f_icon"
        android:drawablePadding="8dp"
        android:padding="8dp"
        android:text="Log in with Facebook"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <!--    <Button-->
<!--        android:id="@+id/custom_fb_button"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginTop="30dp"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        android:background="@drawable/button_background"-->
<!--        android:foreground="?attr/selectableItemBackground"-->
<!--        android:gravity="center"-->
<!--        android:paddingTop="@dimen/btn_padding"-->
<!--        android:paddingBottom="@dimen/btn_padding"-->
<!--        android:text="Sign in with Facebook"-->
<!--        android:drawableLeft="@drawable/ic_f_icon"-->
<!--        android:drawableStart="@drawable/ic_f_icon"-->
<!--        android:paddingLeft="30dp"-->
<!--        android:paddingRight="30dp"-->
<!--        android:textColor="@android:color/white"-->
<!--        android:textSize="@dimen/btn_textSize"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.498"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/linearLayout"-->
<!--        app:layout_constraintVertical_bias="0.274" />-->


</androidx.constraintlayout.widget.ConstraintLayout>